# nte-dice-analysis

./: .envrc  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  README.en.md  README.md  known_items.txt  pyproject.toml
.github/workflows/: ci.yml  release-windows.yml
packaging/windows/: README.windows.txt  nte_dice_analysis.spec  nte_gui_launcher.py
scripts/: build_windows.ps1  bundle_ocr_models.py  release.sh
src/nte_dice_analysis/: __init__.py  capture.py  capture_helper.py  check_known_items_cli.py  cli.py  console.py  constants.py  crop_cli.py  dedup.py  export_png_cli.py  export_records.py  export_xlsx_cli.py  fonts.py  geometry.py  gui.py  gui_strings.py  gui_workflow.py  io.py  json_to_xlsx.py  known_items.py  known_items.toml  layouts.py  merge_xlsx_cli.py  models.py  normalization.py  ocr.py  ocr_records.py  pipeline.py  png.py  recognize_cli.py  records.py  runtime.py  summary.py  visual.py  xlsx.py
src/nte_dice_analysis/gui/: __init__.py  __main__.py  app.py  capture_hotkeys.py  dashboard.py  main_window.py  widgets.py
tests/: conftest.py  test_capture.py  test_cli.py  test_dedup.py  test_export_helpers.py  test_fonts.py  test_geometry_and_normalization.py  test_gui.py  test_gui_workflow.py  test_io.py  test_json_to_xlsx.py  test_ocr_and_records.py  test_pipeline.py  test_split_clis.py  test_visual.py
