[project]
name = "nte-dice-analysis"
version = "0.1.0"
description = "OCR helpers for NTE gacha record screenshots"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.3.4",
    "openpyxl>=3.1.5",
    "paddleocr>=3.3.2",
    "paddlepaddle-gpu==3.2.2",
    "pillow>=12.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[project.scripts]
nte-crop = "nte_dice_analysis.crop_cli:main"
nte-recognize = "nte_dice_analysis.recognize_cli:main"
nte-merge-xlsx = "nte_dice_analysis.merge_xlsx_cli:main"
nte-export-png = "nte_dice_analysis.export_png_cli:main"
nte-check-known-items = "nte_dice_analysis.check_known_items_cli:main"

[build-system]
requires = ["uv_build>=0.11.16,<0.12"]
build-backend = "uv_build"

[tool.uv]
package = true

[tool.uv.sources]
paddlepaddle-gpu = { index = "paddle" }

[[tool.uv.index]]
name = "paddle"
url = "https://www.paddlepaddle.org.cn/packages/stable/cu129/"
explicit = true
