[project]
name = "nte-dice-analysis"
version = "0.1.0"
description = "OCR helpers for NTE gacha record screenshots"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.3.4",
    "openpyxl>=3.1.5",
    "paddleocr>=3.3.2",
    "pillow>=12.0.0",
    "pyside6-essentials>=6.11.1",
]

[project.optional-dependencies]
cpu = [
    "paddlepaddle==3.2.2",
]
gpu = [
    "paddlepaddle-gpu==3.2.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
]
package = [
    "pyinstaller>=6.17.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[project.scripts]
nte-crop = "nte_dice_analysis.crop_cli:main"
nte-recognize = "nte_dice_analysis.recognize_cli:main"
nte-export-xlsx = "nte_dice_analysis.export_xlsx_cli:main"
nte-export-png = "nte_dice_analysis.export_png_cli:main"
nte-check-known-items = "nte_dice_analysis.check_known_items_cli:main"
nte-gui = "nte_dice_analysis.gui:main"

[build-system]
requires = ["uv_build>=0.11.16,<0.12"]
build-backend = "uv_build"

[tool.uv]
package = true
conflicts = [
    [
        { extra = "cpu" },
        { extra = "gpu" },
    ],
]

[tool.uv.sources]
paddlepaddle = { index = "paddle-cpu" }
paddlepaddle-gpu = { index = "paddle-gpu-cu129" }

[[tool.uv.index]]
name = "paddle-cpu"
url = "https://www.paddlepaddle.org.cn/packages/stable/cpu/"
explicit = true

[[tool.uv.index]]
name = "paddle-gpu-cu129"
url = "https://www.paddlepaddle.org.cn/packages/stable/cu129/"
explicit = true
